ArticleReviewProject/src/main/java/com/example/articlereviewproject/error/CustomException.java
package com.example.articlereviewproject.error;

public class CustomException extends RuntimeException{
    public CustomException(String message) {
        super(message);
    }
}
